--- a/RenameThem/App.xaml
+++ b/RenameThem/App.xaml
@@ -1,8 +1,6 @@
 ﻿<Application x:Class="RenameThem.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             StartupUri="Views/MainWindow.xaml">
+    <Application.Resources />
 </Application>
