--- a/RenameThem/Views/MainWindow.xaml
+++ b/RenameThem/Views/MainWindow.xaml
@@ -1,11 +1,18 @@
 ﻿<Window x:Class="RenameThem.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:RenameThem.ViewModels"
         Title="Rename Them 1.0"
         Width="525"
         Height="350"
         Icon="../App.ico"
-        SizeToContent="Height">
+        PreviewKeyDown="onKeyDown"
+        SizeToContent="Height"
+        d:DataContext="{d:DesignInstance vm:MainViewModel}"
+        x:ClassModifier="internal"
+        mc:Ignorable="d">
     <Grid Margin="10,10,10,20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -16,12 +23,20 @@
             <RowDefinition Height="20" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Target="{Binding ElementName=UxPath}">Path:</Label>
-        <TextBox x:Name="UxPath" Grid.Row="1" />
+        <Label Grid.Row="0" Target="{Binding ElementName=UxDirectory}">Directory:</Label>
+        <TextBox x:Name="UxDirectory"
+                 Grid.Row="1"
+                 Text="{Binding RenameDirectory,
+                                UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="3">Rename pattern:</Label>
-        <TextBox x:Name="UxPattern" Grid.Row="4" />
+        <TextBox x:Name="UxPattern"
+                 Grid.Row="4"
+                 Text="{Binding RenamePattern,
+                                UpdateSourceTrigger=PropertyChanged}" />
         <Button Grid.Row="6"
                 HorizontalAlignment="Center"
+                Command="{Binding RenameCommand}"
+                IsDefault="True"
                 Padding="16,3">
             Rename Them!
         </Button>
